--- a/index.html
+++ b/index.html
@@ -1,41 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/style.css">
-	<title>Restaurant site</title>
-	<style></style>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
-<h1>Responsive Layout</h1>
-
-<div class="row">
-	<section class="col-lg-3 col-md-6">
-		<div class="meal">
-			<div class="sectionheader">
-				<h2 id="headerChicken">Chicken</h2>
-			</div>
-			<p>Chicken Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec imperdiet elementum risus, eu porta odio imperdiet sed. Mauris euismod hendrerit erat, vitae tristique augue ullamcorper a. Aliquam erat volutpat. Aliquam turpis justo, interdum ac nulla nec, pellentesque faucibus leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer quis leo ut libero fermentum varius. Donec quis molestie ligula. Ut venenatis, turpis sit amet consectetur rhoncus, justo ante varius ex, et facilisis ex eros non diam. Donec fringilla turpis vel elit efficitur consequat. Sed sollicitudin, augue ut rutrum sodales, nisi mauris pharetra eros, sagittis laoreet nulla sapien id lectus. Curabitur vitae gravida lectus. Aenean quam ex, dignissim vitae eleifend eget, euismod eu ante. Sed aliquam faucibus orci at tempor. Integer varius erat turpis, in condimentum justo euismod sit amet. In efficitur malesuada dignissim. Donec ultricies magna sollicitudin mollis ultrices.</p>
-		</div>
-	</section>
-	<section class="col-lg-3 col-md-6">
-		<div class="meal">
-			<div class="sectionheader">
-				<h2 id="headerBeef">Beef</h2>
-			</div>
-			<p>Chicken Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec imperdiet elementum risus, eu porta odio imperdiet sed. Mauris euismod hendrerit erat, vitae tristique augue ullamcorper a. Aliquam erat volutpat. Aliquam turpis justo, interdum ac nulla nec, pellentesque faucibus leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer quis leo ut libero fermentum varius. Donec quis molestie ligula. Ut venenatis, turpis sit amet consectetur rhoncus, justo ante varius ex, et facilisis ex eros non diam. Donec fringilla turpis vel elit efficitur consequat. Sed sollicitudin, augue ut rutrum sodales, nisi mauris pharetra eros, sagittis laoreet nulla sapien id lectus. Curabitur vitae gravida lectus. Aenean quam ex, dignissim vitae eleifend eget, euismod eu ante. Sed aliquam faucibus orci at tempor. Integer varius erat turpis, in condimentum justo euismod sit amet. In efficitur malesuada dignissim. Donec ultricies magna sollicitudin mollis ultrices. </p>
-			</div>
-		</div>
-	<section class="col-lg-3 col-md-12">
-		<div class="meal">
-			<div class="sectionheader">
-				<h2 id="headerSushi">Sushi</h2>
-			</div>
-			<p>Chicken Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec imperdiet elementum risus, eu porta odio imperdiet sed. Mauris euismod hendrerit erat, vitae tristique augue ullamcorper a. Aliquam erat volutpat. Aliquam turpis justo, interdum ac nulla nec, pellentesque faucibus leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer quis leo ut libero fermentum varius. Donec quis molestie ligula. Ut venenatis, turpis sit amet consectetur rhoncus, justo ante varius ex, et facilisis ex eros non diam. Donec fringilla turpis vel elit efficitur consequat. Sed sollicitudin, augue ut rutrum sodales, nisi mauris pharetra eros, sagittis laoreet nulla sapien id lectus. Curabitur vitae gravida lectus. Aenean quam ex, dignissim vitae eleifend eget, euismod eu ante. Sed aliquam faucibus orci at tempor. Integer varius erat turpis, in condimentum justo euismod sit amet. In efficitur malesuada dignissim. Donec ultricies magna sollicitudin mollis ultrices.</p>
-		</div>
-	</section>
-</div>
-
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
